--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,18 @@ server.error.include-stacktrace=always
 spring.jpa.show-sql=true
 
 ## Heroku
-spring.datasource.url=${DATABASE_URL}?autoReconnect=true&useSSL=false
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+#spring.datasource.url=${DATABASE_URL}?autoReconnect=true&useSSL=false
+#spring.datasource.username=${DATABASE_USERNAME}
+#spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 
 # Local
-#spring.datasource.url=jdbc:mysql://localhost:3306/rhino_tarefas?autoReconnect=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=pipoca150
+spring.datasource.url=jdbc:mysql://localhost:3306/rhino_tarefas?autoReconnect=true&useSSL=false
+spring.datasource.username=
+spring.datasource.password=
 
 # Sem este atributo as tabelas se perdem com nome, maiúsculo e minúsculo
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
