--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.jmx.default-domain: atividades
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
+spring.session.timeout=15m
+
 
 #logging.level.web=debug
 # Com o modo debug, irá exibir no console as URL mapeadas.
